<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.dm.pdf</groupId>
  <artifactId>sample-pdf-itext</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>16</release>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  
  <dependencies>
  
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>kernel</artifactId>
      <version>7.0.2</version>
    </dependency>
    
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>io</artifactId>
      <version>7.0.2</version>
    </dependency>
    
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>layout</artifactId>
      <version>7.0.2</version>
    </dependency>
    
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>forms</artifactId>
      <version>7.0.2</version>
    </dependency>
    
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>pdfa</artifactId>
      <version>7.0.2</version>
    </dependency>
    
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>sign</artifactId>
      <version>7.0.2</version>
    </dependency>
    
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>barcodes</artifactId>
      <version>7.0.2</version>
    </dependency>
    
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>hyph</artifactId>
      <version>7.0.2</version>
    </dependency>
    
  </dependencies>  
  
</project>